improved PWA behavior, auto-launch app if stopped.

--- a/images/web/config/default.conf
+++ b/images/web/config/default.conf
@@ -13,10 +13,11 @@ server {
     }
 
     # not found can happen if the broker cookie has expired
-    # or if the user attepts to visit the /<appname>/ URI before
+    # or if the user attempts to visit the /<appname>/ URI before
     # the cookie is obtained, in this case, redirect back to the
-    # launch page to refresh the cookie.
+    # launch page to refresh the cookie and auto-launch the app.
     location @notfound {
+        rewrite ^/([\w-]+)/.*$ /?launch=$1 redirect;
         return 307 https://$host/;
     }
 
