fix large pub/sub API query, add param to disable image-list sidecar

--- a/setup/manifests/base/pod-broker/broker-statefulset.yaml
+++ b/setup/manifests/base/pod-broker/broker-statefulset.yaml
@@ -342,6 +342,10 @@ spec:
           image: gcr.io/cloud-solutions-images/kube-pod-broker-controller:latest
           workingDir: /var/run/build
           command: ["/usr/local/bin/image-finder"]
+          envFrom:
+            - configMapRef:
+                name: pod-broker-config
+                optional: false
           env:
             - name: NAMESPACE
               valueFrom:
