--- a/setup/manifests/base/pod-broker/image-puller/image-puller-daemonset.yaml
+++ b/setup/manifests/base/pod-broker/image-puller/image-puller-daemonset.yaml
@@ -50,7 +50,7 @@ spec:
         - name: docker
           hostPath:
             path: /var/run/docker.sock
-            type: File
+            type: Socket
         ###
         # Job template
         ###
