migrate pd-ssd and pd-standard StorageClasses to CSI provisioner

--- a/setup/manifests/base/node/pd-ssd-storage-class.yaml
+++ b/setup/manifests/base/node/pd-ssd-storage-class.yaml
@@ -16,7 +16,8 @@ apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
   name: pd-ssd
-provisioner: kubernetes.io/gce-pd
+provisioner: pd.csi.storage.gke.io
+volumeBindingMode: Immediate
+allowVolumeExpansion: true
 parameters:
   type: pd-ssd
-allowVolumeExpansion: true
