--- a/setup/manifests/base/pod-broker/crd.yaml
+++ b/setup/manifests/base/pod-broker/crd.yaml
@@ -237,6 +237,8 @@ spec:
                                 - type: number
                           memory:
                             type: string
+                          ephemeral-storage:
+                            type: string
                       limits:
                         type: object
                         properties:
@@ -246,6 +248,8 @@ spec:
                                 - type: string
                                 - type: number
                           memory:
+                            type: string
+                          ephemeral-storage:
                             type: string
 ---
 # Deprecated in v1.16 in favor of apiextensions.k8s.io/v1
