support for pulling images with cluster image pull secrets

--- a/setup/manifests/base/pod-broker/broker-deployment.yaml
+++ b/setup/manifests/base/pod-broker/broker-deployment.yaml
@@ -252,6 +252,10 @@ spec:
                 name: pod-broker-config
                 optional: false
           env:
+            - name: NAMESPACE
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.namespace
             - name: COOKIE_SECRET
               valueFrom:
                 secretKeyRef:
