--- a/setup/manifests/base/pod-broker/broker-deployment.yaml
+++ b/setup/manifests/base/pod-broker/broker-deployment.yaml
@@ -332,6 +332,12 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.namespace
+          # Pull default pod broker config from ConfigMap
+          # Contains keys in the form of POD_BROKER_PARAM_ValueName=Value
+          envFrom:
+            - configMapRef:
+                name: pod-broker-config
+                optional: false
           volumeMounts:
             - name: build-statefulsets
               mountPath: /var/run/build
