--- a/setup/manifests/base/pod-broker/crd.yaml
+++ b/setup/manifests/base/pod-broker/crd.yaml
@@ -70,6 +70,8 @@ spec:
               type: string
             description:
               type: string
+            metadata:
+              type: object
             icon:
               type: string
             launchURL:
