Change default/placeholder regions to `us-central1`
`us-central1` is a better default region than `us-west1`,
as it should have better worst-case performance across US users.
Outside of the US, users should be changing the default anyways.

--- a/setup/infra/node-pool-apps/cloudbuild.yaml
+++ b/setup/infra/node-pool-apps/cloudbuild.yaml
@@ -16,7 +16,7 @@ timeout: 10800s
 substitutions:
   _ACTION: apply
   _NAME: broker
-  _REGION: us-west1
+  _REGION: us-central1
   _TIER1: "true"
   _TIER2: "true"
 tags:
