--- a/setup/infra/node-pool-gpu/cloudbuild.yaml
+++ b/setup/infra/node-pool-gpu/cloudbuild.yaml
@@ -16,7 +16,7 @@ timeout: 10800s
 substitutions:
   _ACTION: apply
   _NAME: broker
-  _REGION: us-west1
+  _REGION: us-central1
   _COS: "true"
   _UBUNTU: "true"
 tags:
