--- a/setup/infra/private-cluster/cloudbuild.yaml
+++ b/setup/infra/private-cluster/cloudbuild.yaml
@@ -16,7 +16,7 @@ timeout: 10800s
 substitutions:
   _ACTION: apply
   _NAME: broker
-  _REGION: us-west1
+  _REGION: us-central1
 tags:
   - selkies-private-cluster
   - selkies-setup
