--- a/setup/manifests/base/pod-broker/image-puller/kustomization.yaml
+++ b/setup/manifests/base/pod-broker/image-puller/kustomization.yaml
@@ -21,4 +21,5 @@ configMapGenerator:
 
 resources:
   - image-puller-daemonset.yaml
+  - image-puller-networkpolicy.yaml
   - subscription-reaper-cronjob.yaml
