--- a/.github/workflows/publish_all_images.yaml
+++ b/.github/workflows/publish_all_images.yaml
@@ -1,71 +1,22 @@
 name: Publish all images
 
-on: workflow_dispatch
+on:
+  push:
+    branches:
+      - master
+    paths:
+      - '.github/**'
+  workflow_dispatch:
 
 jobs:
   # Note: When modifying this job, copy modifications to all other workflows' image jobs.
-  all_component_images:
+  all_images:
     runs-on: ubuntu-latest
     strategy:
       matrix:
         include:
-          - name: coturn
-            source_directory: addons/coturn
-
-          - name: coturn-web
-            source_directory: addons/coturn-web
-
-          - name: gst-web
-            source_directory: addons/gst-web
-
-          - name: gstreamer
-            version_suffix: -ubuntu18.04
-            build_args: BASE_IMAGE=ubuntu:18.04;
-            source_directory: addons/gstreamer
-
-          - name: gstreamer
-            version_suffix: -ubuntu20.04
-            build_args: BASE_IMAGE=ubuntu:20.04;
-            source_directory: addons/gstreamer
-
-          - name: infra-gcp-installer
-            source_directory: infra/gce/installer-image
-
-          - name: py-build
-            build_args: PACKAGE_VERSION=0.0.0.dev0
-            source_directory: .
-
-    name: ${{ matrix.name }}${{ matrix.version_suffix }} image build & publish
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Build & publish ${{ matrix.name }} image
-        uses: ./.github/actions/build_and_publish_image
-        with:
-          build_args: ${{ matrix.build_args }}
-          github_personal_access_token: ${{ secrets.GITHUB_TOKEN }}
-          github_username: $GITHUB_ACTOR
-          image_name: ${{ matrix.name }}
-          image_source_directory: ${{ matrix.source_directory }}
-          image_version_1: $GITHUB_REF_NAME${{ matrix.version_suffix }}
-
-  # Note: When modifying this job, copy modifications to all other workflows' image jobs.
-  all_example_images:
-    needs: all_component_images
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        include:
-          - name: gst-py-example
-            version_suffix: -ubuntu18.04
-            build_args: PACKAGE_VERSION=0.0.0.dev0;UBUNTU_RELEASE=18.04;GSTREAMER_BASE_IMAGE_RELEASE=${{ github.ref_name }};PY_BUILD_IMAGE=ghcr.io/selkies-project/selkies-gstreamer/py-build:${{ github.ref_name }};WEB_IMAGE=ghcr.io/selkies-project/selkies-gstreamer/gst-web:${{ github.ref_name }}
-            dockerfile: Dockerfile.example
-            source_directory: .
-
-          - name: gst-py-example
-            build_args: PACKAGE_VERSION=0.0.0.dev0;UBUNTU_RELEASE=20.04;GSTREAMER_BASE_IMAGE_RELEASE=${{ github.ref_name }};PY_BUILD_IMAGE=ghcr.io/selkies-project/selkies-gstreamer/py-build:${{ github.ref_name }};WEB_IMAGE=ghcr.io/selkies-project/selkies-gstreamer/gst-web:${{ github.ref_name }}
-            dockerfile: Dockerfile.example
-            source_directory: .
+          - name: PLACEHOLDER
+            source_directory: PLACEHOLDER
 
     name: ${{ matrix.name }}${{ matrix.version_suffix }} image build & publish
     steps:
