--- a/.github/workflows/publish_changed_images.yaml
+++ b/.github/workflows/publish_changed_images.yaml
@@ -4,108 +4,20 @@ on:
   push:
     branches:
       - master
+    paths:
+      - 'images/**'
+  workflow_dispatch:
 
 jobs:
   # Note: When modifying this job, copy modifications to all other workflows' image jobs.
-  changed_component_images:
+  changed_images:
     runs-on: ubuntu-latest
     strategy:
       matrix:
         include:
-          - name: coturn
-            source_directory: addons/coturn
-            source_files_for_diff: addons/coturn
-
-          - name: coturn-web
-            source_directory: addons/coturn-web
-            source_files_for_diff: addons/coturn-web
-
-          - name: gst-web
-            source_directory: addons/gst-web
-            source_files_for_diff: addons/gst-web
-
-          - name: gstreamer
-            version_suffix: -ubuntu18.04
-            build_args: BASE_IMAGE=ubuntu:18.04;
-            source_directory: addons/gstreamer
-            source_files_for_diff: addons/streamer
-
-          - name: gstreamer
-            version_suffix: -ubuntu20.04
-            build_args: BASE_IMAGE=ubuntu:20.04;
-            source_directory: addons/gstreamer
-            source_files_for_diff: addons/gstreamer
-
-          - name: infra-gcp-installer
-            source_directory: infra/gce/installer-image
-            source_files_for_diff: infra/gce/installer-image
-
-          - name: py-build
-            build_args: PACKAGE_VERSION=0.0.0.dev0
-            source_directory: .
-            source_files_for_diff: |
-              ^src
-              ^Dockerfile$
-              pyproject.toml
-              setup.cfg
-              .github/workflows/build_and_publish_changed_images.yaml
-
-    name: ${{ matrix.name }}${{ matrix.version_suffix }} image build & publish
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 2 # This is for changed-files.
-
-      - name: Check for changes to image source
-        id: check
-        uses: tj-actions/changed-files@v1.1.2
-        with:
-          files: ${{ matrix.source_files_for_diff }}
-
-      - name: Build & publish ${{ matrix.name }} image
-        if: steps.check.outputs.any_changed == 'true' || steps.check.outputs.any_deleted == 'true'
-        uses: ./.github/actions/build_and_publish_image
-        with:
-          build_args: ${{ matrix.build_args }}
-          github_personal_access_token: ${{ secrets.GITHUB_TOKEN }}
-          github_username: $GITHUB_ACTOR
-          image_name: ${{ matrix.name }}
-          image_source_directory: ${{ matrix.source_directory }}
-          image_version_1: $GITHUB_REF_NAME${{ matrix.version_suffix }}
-
-  # Note: When modifying this job, copy modifications to all other workflows' image jobs.
-  changed_example_images:
-    needs: changed_component_images
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        include:
-          - name: gst-py-example
-            version_suffix: -ubuntu18.04
-            build_args: PACKAGE_VERSION=0.0.0.dev0;UBUNTU_RELEASE=18.04;GSTREAMER_BASE_IMAGE_RELEASE=${{ github.ref_name }};PY_BUILD_IMAGE=ghcr.io/selkies-project/selkies-gstreamer/py-build:${{ github.ref_name }};WEB_IMAGE=ghcr.io/selkies-project/selkies-gstreamer/gst-web:${{ github.ref_name }}
-            dockerfile: Dockerfile.example
-            source_directory: .
-            source_files_for_diff: |
-              addons
-              src
-              Dockerfile
-              Dockerfile.example
-              pyproject.toml
-              setup.cfg
-              .github/workflows/build_and_publish_changed_images.yaml
-
-          - name: gst-py-example
-            build_args: PACKAGE_VERSION=0.0.0.dev0;UBUNTU_RELEASE=20.04;GSTREAMER_BASE_IMAGE_RELEASE=${{ github.ref_name }};PY_BUILD_IMAGE=ghcr.io/selkies-project/selkies-gstreamer/py-build:${{ github.ref_name }};WEB_IMAGE=ghcr.io/selkies-project/selkies-gstreamer/gst-web:${{ github.ref_name }}
-            dockerfile: Dockerfile.example
-            source_directory: .
-            source_files_for_diff: |
-              addons
-              src
-              Dockerfile
-              Dockerfile.example
-              pyproject.toml
-              setup.cfg
-              .github/workflows/build_and_publish_changed_images.yaml
+          - name: PLACEHOLDER
+            source_directory: PLACEHOLDER
+            source_files_for_diff: PLACEHOLDER
 
     name: ${{ matrix.name }}${{ matrix.version_suffix }} image build & publish
     steps:
