Upgrade `autoneg-controller` to an upstream release
We used (and built) the existing fork/branch to get a bug fix,
but Google's upstream repo has since fixed the bug and published releases.

--- a/setup/manifests/base/autoneg-system/autoneg.yaml
+++ b/setup/manifests/base/autoneg-system/autoneg.yaml
@@ -185,7 +185,7 @@ spec:
             - --enable-leader-election
           command:
             - /manager
-          image: gcr.io/${PROJECT_ID}/kube-pod-broker-autoneg-controller:latest
+          image: ghcr.io/googlecloudplatform/gke-autoneg-controller/gke-autoneg-controller:v0.9.5
           name: manager
           resources:
             limits:
