--- a/setup/manifests/base/autoneg-system/autoneg-system-namespace.yaml
+++ b/setup/manifests/base/autoneg-system/autoneg-system-namespace.yaml
@@ -16,5 +16,6 @@ apiVersion: v1
 kind: Namespace
 metadata:
   labels:
+    app: autoneg
     control-plane: controller-manager
   name: autoneg-system
