--- a/.github/workflows/publish_release.yaml
+++ b/.github/workflows/publish_release.yaml
@@ -1,7 +1,53 @@
 name: Publish release
 
-on: workflow_dispatch
+on:
+  push:
+    tags:
+      - "v*"
+  workflow_dispatch:
 
 jobs:
-  PLACEHOLDER:
+  # Note: When modifying this job, copy modifications to all other workflows' image jobs.
+  all_images:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        include:
+          - name: broker-installer
+            source_directory: images/installer
+
+          - name: controller
+            source_directory: images/controller
+
+          - name: gce-proxy
+            source_directory: images/gce-proxy
+
+    name: ${{ matrix.name }}${{ matrix.version_suffix }} image build & publish
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Build & publish ${{ matrix.name }} image
+        uses: ./.github/actions/build_and_publish_image
+        with:
+          build_args: ${{ matrix.build_args }}
+          github_personal_access_token: ${{ secrets.GITHUB_TOKEN }}
+          github_username: $GITHUB_ACTOR
+          image_name: ${{ matrix.name }}
+          image_source_directory: ${{ matrix.source_directory }}
+          image_version_1: $GITHUB_REF_NAME${{ matrix.version_suffix }}
+          image_version_2: latest${{ matrix.version_suffix }}
+
+  create_release:
+    runs-on: ubuntu-latest
+    needs:
+      - all_images
+    steps:
+      - id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          draft: true
+          prerelease: false
+          release_name: Release ${{ github.ref_name }}
+          tag_name: ${{ github.ref_name }}
