--- a/images/cloudbuild.yaml
+++ b/images/cloudbuild.yaml
@@ -53,14 +53,20 @@ steps:
   waitFor: ["-"]
 - name: 'gcr.io/cloud-builders/docker'
   id: installer
-  args: [
-            'build',
-            '-t', 'gcr.io/${PROJECT_ID}/broker-installer:${_IMAGE_TAG}',
-            '--cache-from', 'gcr.io/${PROJECT_ID}/broker-installer:latest',
-            'installer'
-        ]
+  entrypoint: 'bash'
+  args:
+    - '-c'
+    - |
+      docker build -t gcr.io/${PROJECT_ID}/broker-installer:${_IMAGE_TAG} --cache-from gcr.io/${PROJECT_ID}/broker-installer:latest installer
+      apt install jq -y
+      export DOCKER_CLI_EXPERIMENTAL=enabled
+      curl -o check_docker_image.sh  https://gist.githubusercontent.com/deepak7093/17a0ce3506c39bae0ecaba46d0821510/raw/a2e63872ccb9ef02b718156a2b5c7744221830c5/check_docker_image.sh
+      chmod +x check_docker_image.sh
+      ./check_docker_image.sh -i gcr.io/${PROJECT_ID}/broker-installer:${_IMAGE_TAG} || true
   waitFor:
-    - installer-pull
+    -  installer-pull
+
+
 - name: 'gcr.io/cloud-builders/docker'
   id: installer-tags
   args: [
@@ -81,14 +87,19 @@ steps:
   waitFor: ["-"]
 - name: 'gcr.io/cloud-builders/docker'
   id: controller
-  args: [
-            'build',
-            '-t', 'gcr.io/${PROJECT_ID}/${_IMAGE_PREFIX}-controller:${_IMAGE_TAG}',
-            '--cache-from', 'gcr.io/${PROJECT_ID}/${_IMAGE_PREFIX}-controller:latest',
-            'controller'
-        ]
+  entrypoint: 'bash'
+  args:
+    - '-c'
+    - |
+      docker build -t gcr.io/${PROJECT_ID}/${_IMAGE_PREFIX}-controller:${_IMAGE_TAG} --cache-from gcr.io/${PROJECT_ID}/${_IMAGE_PREFIX}-controller:latest controller
+      apt install jq -y
+      export DOCKER_CLI_EXPERIMENTAL=enabled
+      curl -o check_docker_image.sh  https://gist.githubusercontent.com/deepak7093/17a0ce3506c39bae0ecaba46d0821510/raw/a2e63872ccb9ef02b718156a2b5c7744221830c5/check_docker_image.sh
+      chmod +x check_docker_image.sh
+      ./check_docker_image.sh -i gcr.io/${PROJECT_ID}/${_IMAGE_PREFIX}-controller:${_IMAGE_TAG} || true
   waitFor:
-    - controller-pull
+    -  controller-pull
+
 - name: 'gcr.io/cloud-builders/docker'
   id: controller-tags
   args: [
@@ -106,17 +117,22 @@ steps:
   id: gce-proxy-pull
   entrypoint: 'bash'
   args: ["-c", "if [[ '${_USE_CACHE}' == 'true' ]]; then (docker pull gcr.io/${PROJECT_ID}/${_IMAGE_PREFIX}-gce-proxy:latest || exit 0); fi"]
-  waitFor: ["-"]
+  waitFor: ["-"]  
 - name: 'gcr.io/cloud-builders/docker'
   id: gce-proxy
-  args: [
-            'build',
-            '-t', 'gcr.io/${PROJECT_ID}/${_IMAGE_PREFIX}-gce-proxy:${_IMAGE_TAG}',
-            '--cache-from', 'gcr.io/${PROJECT_ID}/${_IMAGE_PREFIX}-gce-proxy:latest',
-            'gce-proxy'
-        ]
+  entrypoint: 'bash'
+  args:
+    - '-c'
+    - |
+      docker build -t gcr.io/${PROJECT_ID}/${_IMAGE_PREFIX}-gce-proxy:${_IMAGE_TAG} --cache-from gcr.io/${PROJECT_ID}/${_IMAGE_PREFIX}-gce-proxy:latest gce-proxy
+      apt install jq -y
+      export DOCKER_CLI_EXPERIMENTAL=enabled
+      curl -o check_docker_image.sh  https://gist.githubusercontent.com/deepak7093/17a0ce3506c39bae0ecaba46d0821510/raw/a2e63872ccb9ef02b718156a2b5c7744221830c5/check_docker_image.sh
+      chmod +x check_docker_image.sh
+      ./check_docker_image.sh -i gcr.io/${PROJECT_ID}/${_IMAGE_PREFIX}-gce-proxy:${_IMAGE_TAG} || true
   waitFor:
-    - gce-proxy-pull
+    -  gce-proxy-pull
+
 - name: 'gcr.io/cloud-builders/docker'
   id: gce-proxy-tags
   args: [
@@ -159,15 +175,18 @@ steps:
     - autoneg-controller-clone
 - name: 'gcr.io/cloud-builders/docker'
   id: autoneg-controller-docker
-  dir: gke-autoneg-controller
-  args: [
-            'build',
-            '-t', 'gcr.io/${PROJECT_ID}/${_IMAGE_PREFIX}-autoneg-controller:${_IMAGE_TAG}',
-            '--cache-from', 'gcr.io/${PROJECT_ID}/${_IMAGE_PREFIX}-autoneg-controller:latest',
-            '.'
-        ]
+  entrypoint: 'bash'
+  args:
+    - '-c'
+    - |
+      docker build -t gcr.io/${PROJECT_ID}/${_IMAGE_PREFIX}-autoneg-controller:${_IMAGE_TAG} --cache-from gcr.io/${PROJECT_ID}/${_IMAGE_PREFIX}-autoneg-controller:latest .
+      apt install jq -y
+      export DOCKER_CLI_EXPERIMENTAL=enabled
+      curl -o check_docker_image.sh  https://gist.githubusercontent.com/deepak7093/17a0ce3506c39bae0ecaba46d0821510/raw/a2e63872ccb9ef02b718156a2b5c7744221830c5/check_docker_image.sh
+      chmod +x check_docker_image.sh
+      ./check_docker_image.sh -i gcr.io/${PROJECT_ID}/${_IMAGE_PREFIX}-autoneg-controller:${_IMAGE_TAG} || true
   waitFor:
-    - autoneg-controller-build
+    -  autoneg-controller-build
 - name: 'gcr.io/cloud-builders/docker'
   id: autoneg-controller-tags
   args: [
