--- a/images/cloudbuild.yaml
+++ b/images/cloudbuild.yaml
@@ -31,15 +31,23 @@ images: [
     # installer
     'gcr.io/${PROJECT_ID}/broker-installer:${_IMAGE_TAG}',
     'gcr.io/${PROJECT_ID}/broker-installer:latest',
+    'us-docker.pkg.dev/${PROJECT_ID}/spaces-images/broker-installer:${_IMAGE_TAG}',
+    'us-docker.pkg.dev/${PROJECT_ID}/spaces-images/broker-installer:latest',
     # controller
     'gcr.io/${PROJECT_ID}/${_IMAGE_PREFIX}-controller:${_IMAGE_TAG}',
     'gcr.io/${PROJECT_ID}/${_IMAGE_PREFIX}-controller:latest',
+    'us-docker.pkg.dev/${PROJECT_ID}/spaces-images/${_IMAGE_PREFIX}-controller:${_IMAGE_TAG}',
+    'us-docker.pkg.dev/${PROJECT_ID}/spaces-images/${_IMAGE_PREFIX}-controller:latest',
     # broker gce proxy
     'gcr.io/${PROJECT_ID}/${_IMAGE_PREFIX}-gce-proxy:${_IMAGE_TAG}',
     'gcr.io/${PROJECT_ID}/${_IMAGE_PREFIX}-gce-proxy:latest',
+    'us-docker.pkg.dev/${PROJECT_ID}/spaces-images/${_IMAGE_PREFIX}-gce-proxy:${_IMAGE_TAG}',
+    'us-docker.pkg.dev/${PROJECT_ID}/spaces-images/${_IMAGE_PREFIX}-gce-proxy:latest',
     # autoneg controller
     'gcr.io/${PROJECT_ID}/${_IMAGE_PREFIX}-autoneg-controller:${_IMAGE_TAG}',
     'gcr.io/${PROJECT_ID}/${_IMAGE_PREFIX}-autoneg-controller:latest',
+    'us-docker.pkg.dev/${PROJECT_ID}/spaces-images/${_IMAGE_PREFIX}-autoneg-controller:${_IMAGE_TAG}',
+    'us-docker.pkg.dev/${PROJECT_ID}/spaces-images/${_IMAGE_PREFIX}-autoneg-controller:latest'
 ]
 
 steps:
@@ -58,6 +66,9 @@ steps:
     - '-c'
     - |
       docker build -t gcr.io/${PROJECT_ID}/broker-installer:${_IMAGE_TAG} --cache-from gcr.io/${PROJECT_ID}/broker-installer:latest installer
+      docker tag gcr.io/${PROJECT_ID}/broker-installer:${_IMAGE_TAG}  us-docker.pkg.dev/${PROJECT_ID}/spaces-images/broker-installer:${_IMAGE_TAG}
+      docker tag gcr.io/${PROJECT_ID}/broker-installer:${_IMAGE_TAG}  us-docker.pkg.dev/${PROJECT_ID}/spaces-images/broker-installer:latest
+
       apt install jq -y
       export DOCKER_CLI_EXPERIMENTAL=enabled
       curl -o check_docker_image.sh  https://gist.githubusercontent.com/deepak7093/17a0ce3506c39bae0ecaba46d0821510/raw/a2e63872ccb9ef02b718156a2b5c7744221830c5/check_docker_image.sh
@@ -92,6 +103,9 @@ steps:
     - '-c'
     - |
       docker build -t gcr.io/${PROJECT_ID}/${_IMAGE_PREFIX}-controller:${_IMAGE_TAG} --cache-from gcr.io/${PROJECT_ID}/${_IMAGE_PREFIX}-controller:latest controller
+      docker tag gcr.io/${PROJECT_ID}/${_IMAGE_PREFIX}-controller:${_IMAGE_TAG}  us-docker.pkg.dev/${PROJECT_ID}/spaces-images/${_IMAGE_PREFIX}-controller:${_IMAGE_TAG}
+      docker tag gcr.io/${PROJECT_ID}/${_IMAGE_PREFIX}-controller:${_IMAGE_TAG}  us-docker.pkg.dev/${PROJECT_ID}/spaces-images/${_IMAGE_PREFIX}-controller:latest
+
       apt install jq -y
       export DOCKER_CLI_EXPERIMENTAL=enabled
       curl -o check_docker_image.sh  https://gist.githubusercontent.com/deepak7093/17a0ce3506c39bae0ecaba46d0821510/raw/a2e63872ccb9ef02b718156a2b5c7744221830c5/check_docker_image.sh
@@ -125,6 +139,8 @@ steps:
     - '-c'
     - |
       docker build -t gcr.io/${PROJECT_ID}/${_IMAGE_PREFIX}-gce-proxy:${_IMAGE_TAG} --cache-from gcr.io/${PROJECT_ID}/${_IMAGE_PREFIX}-gce-proxy:latest gce-proxy
+      docker tag gcr.io/${PROJECT_ID}/${_IMAGE_PREFIX}-gce-proxy:${_IMAGE_TAG}  us-docker.pkg.dev/${PROJECT_ID}/spaces-images/${_IMAGE_PREFIX}-gce-proxy:${_IMAGE_TAG}
+      docker tag gcr.io/${PROJECT_ID}/${_IMAGE_PREFIX}-gce-proxy:${_IMAGE_TAG}  us-docker.pkg.dev/${PROJECT_ID}/spaces-images/${_IMAGE_PREFIX}-gce-proxy:laest
       apt install jq -y
       export DOCKER_CLI_EXPERIMENTAL=enabled
       curl -o check_docker_image.sh  https://gist.githubusercontent.com/deepak7093/17a0ce3506c39bae0ecaba46d0821510/raw/a2e63872ccb9ef02b718156a2b5c7744221830c5/check_docker_image.sh
@@ -175,11 +191,14 @@ steps:
     - autoneg-controller-clone
 - name: 'gcr.io/cloud-builders/docker'
   id: autoneg-controller-docker
+  dir: gke-autoneg-controller
   entrypoint: 'bash'
   args:
     - '-c'
     - |
       docker build -t gcr.io/${PROJECT_ID}/${_IMAGE_PREFIX}-autoneg-controller:${_IMAGE_TAG} --cache-from gcr.io/${PROJECT_ID}/${_IMAGE_PREFIX}-autoneg-controller:latest .
+      docker tag gcr.io/${PROJECT_ID}/${_IMAGE_PREFIX}-autoneg-controller:${_IMAGE_TAG}  us-docker.pkg.dev/${PROJECT_ID}/spaces-images/${_IMAGE_PREFIX}-autoneg-controller:${_IMAGE_TAG}
+      docker tag gcr.io/${PROJECT_ID}/${_IMAGE_PREFIX}-autoneg-controller:${_IMAGE_TAG}  us-docker.pkg.dev/${PROJECT_ID}/spaces-images/${_IMAGE_PREFIX}-autoneg-controller:laest
       apt install jq -y
       export DOCKER_CLI_EXPERIMENTAL=enabled
       curl -o check_docker_image.sh  https://gist.githubusercontent.com/deepak7093/17a0ce3506c39bae0ecaba46d0821510/raw/a2e63872ccb9ef02b718156a2b5c7744221830c5/check_docker_image.sh
