--- a/images/cloudbuild.yaml
+++ b/images/cloudbuild.yaml
@@ -110,7 +110,7 @@ steps:
       apt install jq -y
       export DOCKER_CLI_EXPERIMENTAL=enabled
       chmod +x setup/scripts/check_docker_image.sh
-      ./setup/scripts/check_docker_image.sh -i gcr.io/${PROJECT_ID}/broker-installer:${_IMAGE_TAG} || true
+      ./setup/scripts/check_docker_image.sh -i gcr.io/${PROJECT_ID}/${_IMAGE_PREFIX}-controller:${_IMAGE_TAG} || true
   waitFor:
     -  controller-pull
 
@@ -144,7 +144,7 @@ steps:
       apt install jq -y
       export DOCKER_CLI_EXPERIMENTAL=enabled
        chmod +x setup/scripts/check_docker_image.sh
-      ./setup/scripts/check_docker_image.sh -i gcr.io/${PROJECT_ID}/broker-installer:${_IMAGE_TAG} || true
+      ./setup/scripts/check_docker_image.sh -i gcr.io/${PROJECT_ID}/${_IMAGE_PREFIX}-gce-proxy:${_IMAGE_TAG} || true
   waitFor:
     -  gce-proxy-pull
 
@@ -201,7 +201,7 @@ steps:
       apt install jq -y
       export DOCKER_CLI_EXPERIMENTAL=enabled
       chmod +x setup/scripts/check_docker_image.sh
-      ./setup/scripts/check_docker_image.sh -i gcr.io/${PROJECT_ID}/broker-installer:${_IMAGE_TAG} || true
+      ./setup/scripts/check_docker_image.sh -i gcr.io/${PROJECT_ID}/${_IMAGE_PREFIX}-autoneg-controller:${_IMAGE_TAG} || true
   waitFor:
     -  autoneg-controller-build
 - name: 'gcr.io/cloud-builders/docker'
