tf fmt,installer image

--- a/setup/infra/image-streaming/cloudbuild.yaml
+++ b/setup/infra/image-streaming/cloudbuild.yaml
@@ -34,30 +34,17 @@ steps:
       - |
         gsutil mb gs://${PROJECT_ID}-${_NAME}-tf-state || true
     waitFor: ["-"]
-  ###
-  # Copy terraform binary
-  ###
-  - name: "hashicorp/terraform:1.2.0"
-    id: "terraform-download"
-    entrypoint: "/bin/sh"
-    args:
-      - "-exc"
-      - |
-        cp /bin/terraform /workspace/
-    waitFor: ["-"]
 
   ###
   # Apply terraform to create base infrastructure
   ###
-  - name: "gcr.io/cloud-builders/gcloud"
+  - name: "gcr.io/${PROJECT_ID}/${_NAME}-installer"
     id: "terraform-apply"
     entrypoint: "/workspace/deploy.sh"
     env:
-      - PATH=/builder/google-cloud-sdk/bin/:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/workspace
       - TF_VAR_project_id=${PROJECT_ID}
       - TF_VAR_name=${_NAME}
       - TF_VAR_region=${_REGION}
       - TF_VAR_tier3_pool_enabled=${_TIER3}
       - TERRAFORM_WORKSPACE_NAME=image-straming-${_REGION}
       - ACTION=${_ACTION}
-    waitFor: ["terraform-download"]
