remove istio operator

--- a/images/installer/Dockerfile
+++ b/images/installer/Dockerfile
@@ -52,12 +52,10 @@ COPY --from=kubectl /builder/google-cloud-sdk/bin/kubectl /usr/local/bin/kubectl
 # Install gke-gcloud-auth-plugin
 RUN gcloud components install gke-gcloud-auth-plugin --quiet
 
-# Install gke-gcloud-auth-plugin
-RUN gcloud components install gke-gcloud-auth-plugin --quiet
+# # Download the istio operator release
+# RUN mkdir -p /opt/istio-operator && cd /opt/istio-operator && \
+#     wget --timeout 2 --tries 5 -qO- https://github.com/istio/operator/archive/${ISTIO_OPERATOR_VERSION}.tar.gz | tar --strip-components=1 -zxf - 
 
-# Download the istio operator release
-RUN mkdir -p /opt/istio-operator && cd /opt/istio-operator && \
-    wget --timeout 2 --tries 5 -qO- https://github.com/istio/operator/archive/${ISTIO_OPERATOR_VERSION}.tar.gz | tar --strip-components=1 -zxf - 
 # Download compat istio release
 RUN mkdir -p /opt/istio-${ISTIO_COMPAT}/bin && cd /opt/istio-${ISTIO_COMPAT}/bin && \
     curl -L https://github.com/istio/istio/releases/download/${ISTIO_COMPAT}/istioctl-${ISTIO_COMPAT}-linux-amd64.tar.gz | tar zxvf - istioctl > istioctl && chmod +x istioctl
